# Lab2-ConwaysGameOfLife

./: README.md
Lab2/: CMakeLists.txt  main.cpp
